@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-12T16:07:06Z",
+  "timestamp" : "2023-08-14T16:08:02Z",
   "count_outdated" : 1387,
   "uniques_outdated" : 335,
-  "count" : 1470,
-  "uniques" : 346,
+  "count" : 1484,
+  "uniques" : 347,
   "views" : [
     {
       "timestamp": "2023-08-01T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-08-14T00:00:00Z",
+      "count": 14,
+      "count_minmax": [ 14, 14 ],
+      "count_decinc": [ 0, 14 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
