@@ -1,6 +1,6 @@
 {
-  "count": 83,
-  "uniques": 11,
+  "count": 97,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2023-08-01T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2023-08-11T00:00:00Z",
       "count": 9,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-08-14T00:00:00Z",
+      "count": 14,
+      "uniques": 1
     }
   ]
 }
