@@ -1,3 +1,12 @@
+2023-08-14T16:08:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5857985071 # 1817
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
+* notice: last 14d: unq all: 12 97
+* notice: prev accum: outdated-unq outdated-all / unq all: 335 1387 / 346 1470
+* notice: next accum: outdated-unq outdated-all / unq all: 335 1387 / 347 1484
+* notice: prev exec diff / last date diff / accum: unq all: +1 +14 -0 -0 / +1 +14 -0 -0 / 1 14
+* notice: removed / changed dates: [] / [2023-08-14]
+
 2023-08-12T16:07:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5842258759 # 1811
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
